@@ -7,6 +7,7 @@ head, planned as v0.23
 - Added Spanish translation. Special thanks to Ángel Millán who provided
   the translation.
 - Added a statistics dialog which shows the number of used components.
+- Multiple break components are allowed.
 - The fsm dialog loads the correct fsm if a circuit is open which
   is based on that fsm.
 - If a VHDL defined component is used, ghdl now uses VHDL-2008.
